[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "curvfuse"
version = "0.1.0"
description = "CurvFuse"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}

dependencies = [
  "numpy",
  "scipy",
  "scikit-image",
  "opencv-python",
  "torch",
  "tqdm",
  "scipy",
]

[tool.setuptools.packages.find]
where = ["src"]
